Actions
Bug #11803
closedevtchn: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
./../common/xen/io/evtchn_dev.c:637:38: error: cast between incompatible function types from 'void (*)()' to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (void) add_avintr(NULL, IPL_EVTCHN, (avfunc)evtchn_device_upcall, ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 158d5b49eb8c84e56cc2259b758a2f2bf876419a
commit 158d5b49eb8c84e56cc2259b758a2f2bf876419a Author: Toomas Soome <tsoome@me.com> Date: 2019-11-14T08:15:20.000Z 11803 evtchn: cast between incompatible function types Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions